; ModuleID = '/home/carl/AnghaBench/git/negotiator/extr_default.c_rev_list_push.c'
source_filename = "/home/carl/AnghaBench/git/negotiator/extr_default.c_rev_list_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.negotiation_state = type { i32, i32 }
%struct.commit = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@COMMON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.negotiation_state*, %struct.commit*, i32)* @rev_list_push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rev_list_push(%struct.negotiation_state* %0, %struct.commit* %1, i32 %2) #0 {
  %4 = alloca %struct.negotiation_state*, align 8
  %5 = alloca %struct.commit*, align 8
  %6 = alloca i32, align 4
  store %struct.negotiation_state* %0, %struct.negotiation_state** %4, align 8
  store %struct.commit* %1, %struct.commit** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.commit*, %struct.commit** %5, align 8
  %8 = getelementptr inbounds %struct.commit, %struct.commit* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %43, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.commit*, %struct.commit** %5, align 8
  %17 = getelementptr inbounds %struct.commit, %struct.commit* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = or i32 %19, %15
  store i32 %20, i32* %18, align 4
  %21 = load %struct.commit*, %struct.commit** %5, align 8
  %22 = call i64 @parse_commit(%struct.commit* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %14
  br label %43

25:                                               ; preds = %14
  %26 = load %struct.negotiation_state*, %struct.negotiation_state** %4, align 8
  %27 = getelementptr inbounds %struct.negotiation_state, %struct.negotiation_state* %26, i32 0, i32 1
  %28 = load %struct.commit*, %struct.commit** %5, align 8
  %29 = call i32 @prio_queue_put(i32* %27, %struct.commit* %28)
  %30 = load %struct.commit*, %struct.commit** %5, align 8
  %31 = getelementptr inbounds %struct.commit, %struct.commit* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @COMMON, align 4
  %35 = and i32 %33, %34
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %42, label %37

37:                                               ; preds = %25
  %38 = load %struct.negotiation_state*, %struct.negotiation_state** %4, align 8
  %39 = getelementptr inbounds %struct.negotiation_state, %struct.negotiation_state* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %39, align 4
  br label %42

42:                                               ; preds = %37, %25
  br label %43

43:                                               ; preds = %24, %42, %3
  ret void
}

declare dso_local i64 @parse_commit(%struct.commit*) #1

declare dso_local i32 @prio_queue_put(i32*, %struct.commit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
